test/message/test-no-extra-info-on-fatal-exception.out
*:6
throw new Error('foo');
^

Error: foo
    at Object.<anonymous> (*:6:7)
    at Module._compile (node:internal/modules/cjs/loader:*:*)
    at Module._extensions..js (node:internal/modules/cjs/loader:*:*)
    at Module.load (node:internal/modules/cjs/loader:*:*)
    at Module._load (node:internal/modules/cjs/loader:*:*)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:*:*)
    at node:internal/main/run_main_module:*:*
