test/message/test-no-extra-info-on-fatal-exception.js
// Flags: --no-extra-info-on-fatal-exception

'use strict';
require('../common');

throw new Error('foo');
